changed rohit's post
localization is already done

--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@ crossorigin="anonymous"></script>
           <br>
           <p> rrpillai </p>
           <p class="smol">            
-            I tested the FSM on the RC car and then spent some time debugging it.  We were able to get the car to properly switch states and make rough movements.  For next week, I will be working on localization.
+            I tested the FSM on the RC car and then spent some time debugging it.  We were able to get the car to properly switch states and make rough movements.  I also wrote some code for localization, but it needs to be tested.
           </p>
           <br>
           <p> davidyu </p>
